--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = nordicnrf52
 board = adafruit_feather_nrf52832
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	adafruit/Adafruit TinyUSB Library@^2.2.1
 	adafruit/Adafruit PWM Servo Driver Library@^2.4.1
