--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = nordicnrf52
 board = adafruit_feather_nrf52832
 framework = arduino
 monitor_speed = 115200
+build_unflags = -std=gnu++11
+build_flags = -std=c++17
 lib_deps = 
 	adafruit/Adafruit TinyUSB Library@^2.2.1
 	adafruit/Adafruit PWM Servo Driver Library@^2.4.1
