--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,4 @@ build_flags = -std=c++17
 lib_deps = 
 	adafruit/Adafruit TinyUSB Library@^2.2.1
 	adafruit/Adafruit PWM Servo Driver Library@^2.4.1
+	wilmouths/RGB@^1.0.10
