--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,10 @@ board = adafruit_feather_nrf52832
 framework = arduino
 monitor_speed = 115200
 build_unflags = -std=gnu++11
-build_flags = -std=c++17
+build_flags = -std=c++17 
+extra_scripts = pre:scripts/generate_compile_commands.py
 lib_deps = 
 	adafruit/Adafruit TinyUSB Library@^2.2.1
 	adafruit/Adafruit PWM Servo Driver Library@^2.4.1
 	wilmouths/RGB@^1.0.10
+
